# brief-agent-buildOS26

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEPLOY.md  Dockerfile  LICENSE  README.md
fixtures/gmail/: thread-001-northwind-ventures.json  thread-001-telus-ventures.json  thread-002-mila-ventures.json  thread-002-summit-build-day.json  thread-003-meridian-capital.json  thread-003-real-ventures.json
src/: config.rs  domain.rs  main.rs
src/handlers/: brief.rs  linear_query.rs  local_docs_search.rs  mod.rs  search_gmail.rs  session.rs  slack.rs  verify_claim.rs  web_fetch.rs  web_search.rs
src/handlers/webhook/: mod.rs  openai_realtime.rs  twilio_status.rs
src/infrastructure/: mod.rs  slack.rs
src/infrastructure/voice/: mod.rs
src/infrastructure/voice/openai_realtime/: client.rs  mod.rs  signature.rs  vc_brief_workflow.rs
src/tools/: gmail_fixtures.rs  local_docs_loader.rs  mod.rs
web/: index.html
