[package]
name = "brief-agent-buildos26"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.6", features = ["macros"] }
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
dashmap = "6.1.0"
dotenvy = "0.15.7"
hmac = "0.12.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
sha2 = "0.10.9"
subtle = "2.6.1"
tokio = { version = "1.50.0", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tower-http = { version = "0.6.6", features = ["cors", "limit", "set-header", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }
urlencoding = "2.1.3"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
